Day 6 solution